--- a/website-howto.html
+++ b/website-howto.html
@@ -55,7 +55,7 @@
         <p> There were certain specifics of the code that I learned about, had to figure out how to use, or just refresh my memory on the way they work. Such examples of these are 'addEventListener', 'button', 'getElementbyId', and more. </p>
     <h3> -addEventListener- </h3>
         <img src="img/eventlistener.png" /> 
-        <p> Event Listeners give an element something to 'listen' for (such as a mouse click, or a key being pressed) and then a function to perform when that event occurs. In this image, the event listener tells the element "scoresButton" to listen for the "click" event to happen. When it does, it will run the functions in the code block below. </p>
+        <p> Event Listeners give an element something to 'listen' for (such as a mouse click, or a key being pressed) and then a function to perform when that event occurs. In this image, the event listener tells the element "scoresButton" to listen for the "click" event to happen. When it does, it will run the functions in the code block below. In my project, after the button is clicked, it will run through all the if-else statements and check each question to see which one it should mark as 'correct' and 'try again'. </p>
     <h3> -Button- </h3>
         <img src="img/button.png" />
         <img src="img/buttoncss.png" />
